--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
-  background-color: #0a100d;
+  background-image: linear-gradient(
+      rgba(10, 16, 13, 0.5),
+      rgba(10, 16, 13, 0.5)
+    ),
+    url('../src/assets/images/background.jpg');
+  background-position: top;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 code {
