--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -1,10 +1,18 @@
-.container {
+.contentContainer {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 100%;
-  height: 100vh;
+  width: 40%;
+  margin-top: 5rem;
+  margin-left: 1rem;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px #f9f231;
+  background-color: #0a100d99;
+  @media screen and (max-width: 767px) {
+    margin: 3rem auto;
+    width: 90%;
+  }
 }
 .login {
   display: flex;
@@ -46,4 +54,11 @@ span {
 
 .loginBtn:hover {
   background-color: #ccc625;
+}
+
+.username {
+  color: #fff;
+  text-transform: capitalize;
+  margin: 3rem;
+  text-align: center;
 }
