--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -1,4 +1,14 @@
-.contentContainer {
+.containers {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  width: 100%;
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+  }
+}
+.container {
   display: flex;
   align-items: center;
   justify-content: center;
