--- a/src/components/searchBar/searchBar.module.css
+++ b/src/components/searchBar/searchBar.module.css
@@ -48,3 +48,13 @@
   top: 3.75rem;
   width: 100%;
 }
+.logoutBtn {
+  background-color: #f9f231;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 40px;
+  @media screen and (max-width: 767px) {
+    padding: 5px 20px;
+  }
+}
