--- a/src/components/searchResults/searchResults.module.css
+++ b/src/components/searchResults/searchResults.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   color: #fff;
+  height: 100%;
 }
