--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -8,6 +8,7 @@
     flex-direction: column;
   }
 }
+
 .container {
   display: flex;
   align-items: center;
@@ -25,6 +26,15 @@
     width: 90%;
   }
 }
+.loginContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
 .login {
   display: flex;
   flex-direction: column;
@@ -34,7 +44,6 @@
   width: 40%;
   text-align: center;
   border-radius: 10px;
-
   background-color: #0a100d99;
   box-shadow: 0px 0px 20px #f9f231;
   padding: 20px 0;
