--- a/src/components/searchBar/searchBar.module.css
+++ b/src/components/searchBar/searchBar.module.css
@@ -54,7 +54,11 @@
   border: none;
   border-radius: 10px;
   padding: 10px 40px;
+  cursor: pointer;
   @media screen and (max-width: 767px) {
     padding: 5px 20px;
   }
+}
+.logoutBtn:hover {
+  background-color: #d6d028;
 }
