--- a/src/ui/searchBtns.module.css
+++ b/src/ui/searchBtns.module.css
@@ -16,9 +16,14 @@
   background-color: #f9f231;
   text-transform: uppercase;
   margin: 0 1rem;
+  cursor: pointer;
   @media screen and (max-width: 767px) {
     padding: 5px 20px;
     letter-spacing: 0;
     margin: 0;
   }
+}
+
+.btn:hover {
+  background-color: #d6d028;
 }
