--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -20,11 +20,16 @@
   border-radius: 10px;
   box-shadow: 0px 0px 10px #f9f231;
   background-color: #0a100d99;
-  height: 200px;
+  height: 400px;
+  overflow-y: auto;
+  overflow-x: hidden;
   @media screen and (max-width: 767px) {
     margin: 3rem auto;
     width: 90%;
   }
+}
+.container::-webkit-scrollbar {
+  background-color: transparent;
 }
 .loginContainer {
   display: flex;
