--- a/src/components/searchBar/searchBar.module.css
+++ b/src/components/searchBar/searchBar.module.css
@@ -6,9 +6,29 @@
   width: 100%;
   padding: 0 1rem;
   box-sizing: border-box;
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+  }
+}
+
+.smallScreen {
+  display: none;
+  @media screen and (max-width: 767px) {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .logo {
+  color: #fff;
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+}
+.smallScreenLogo {
   color: #fff;
 }
 
@@ -20,13 +40,17 @@
   flex: 0 0 50%;
   position: relative;
   margin-top: -48px;
+  @media screen and (max-width: 767px) {
+    width: 100%;
+    margin-top: 0;
+    margin-bottom: 3rem;
+  }
 }
 .input {
   position: absolute;
   width: 100%;
   height: 48px;
   border-radius: 20px;
-  /* border: none; */
   border: 1px solid #fff;
   background-color: transparent;
   right: 0;
@@ -57,7 +81,19 @@
   cursor: pointer;
   @media screen and (max-width: 767px) {
     padding: 5px 20px;
+    display: none;
   }
+}
+.smallScreenLogoutBtn {
+  background-color: #f9f231;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 40px;
+  cursor: pointer;
+}
+.smallScreenLogoutBtn:hover {
+  background-color: #d6d028;
 }
 .logoutBtn:hover {
   background-color: #d6d028;
