--- a/src/components/track/track.module.css
+++ b/src/components/track/track.module.css
@@ -12,7 +12,7 @@
 }
 
 .textContainer {
-  flex: 0 0 90%;
+  flex: 0 0 85%;
 }
 .img {
   width: 5rem;
@@ -45,6 +45,9 @@
   }
 }
 .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #f9f231;
   border: none;
   border-radius: 10px;
